--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nodejs CMS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node notch.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,6 @@
     "url": "https://github.com/TheRightDirection/Aro/issues"
   },
   "dependencies": {
-    
+    "mongoose": "^3.8.16"
   }
 }
