--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/TheRightDirection/Aro/issues"
   },
   "dependencies": {
-    "mongoose": "^3.8.16"
+    "mongoose": "^3.8.17",
+    "sandbox": "^0.8.6"
   }
 }
