--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "mongoose": "^3.8.17",
-    "sandbox": "^0.8.6"
+    "sandbox": "^0.8.6",
+    "express": "^4.9.5"
   }
 }
