Just added socket.io and fixed server issues. Admin page is now hosted by the app, visit localhost:8000/admin/pages/background.html to see the basic system. Will use sockets to push page, stack, and all necessary data to render page on client and then re-upload. Will use the aro atribute to identify which dom elements are driven by js. Should use angular at some point but that's down the road.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "mongoose": "^3.8.17",
     "sandbox": "^0.8.6",
-    "express": "^4.9.5"
+    "express": "^4.9.5",
+    "directory": "^0.1.0",
+    "serve-index": "^1.5.1",
+    "socket.io": "^1.2.1"
   }
 }
