--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "url": "https://github.com/TheRightDirection/Aro/issues"
   },
   "dependencies": {
-    "mongoose": "^3.8.17",
-    "sandbox": "^0.8.6",
-    "express": "^4.9.5",
     "directory": "^0.1.0",
+    "express": "^4.9.5",
+    "mongoose": "^3.8.17",
+    "node-fs-extra": "^0.8.1",
+    "sandbox": "^0.8.6",
     "serve-index": "^1.5.1",
     "socket.io": "^1.2.1"
   }
